[gd_scene load_steps=4 format=3 uid="uid://ccmx62woumehr"]

[ext_resource type="Texture2D" uid="uid://cij85ml5jqdim" path="res://Assets/sprites/artillery-shell.svg" id="1_v0sd6"]
[ext_resource type="Script" uid="uid://exbhgmbaof5l" path="res://shooting_button.gd" id="2_ayq7h"]
[ext_resource type="FontFile" uid="uid://vvm7gysc4018" path="res://Assets/sprites/PixelOperator.ttf" id="3_uaksc"]

[node name="shot_cool_display" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_v0sd6")
script = ExtResource("2_ayq7h")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sweep" type="TextureProgressBar" parent="."]
modulate = Color(0.21770102, 0.21770105, 0.21770105, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5

[node name="Value" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_uaksc")
theme_override_font_sizes/font_size = 300
text = "0.0"
horizontal_alignment = 2
vertical_alignment = 2
clip_text = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
